--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <meta name="keywords" content="パチンコ,期待値,計算">
 <meta name="description" content="パチンコの期待値を計算します。">
 <title>実績入力／計算</title>
-<link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen">
+<!-- <link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen">
+-->
 <!-- ▼ファビコン設置箇所▼
 ※ファビコンを使用する際はコメントアウトを消してください。-->
 <!-- /<link rel="shortcut icon" href="icon URL.ico"> -->
