--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
 
-<title>マルフォイ期待値</title>
+<title>虹遙期待値</title>
 
 <h1>期待値計算~to_boshi~</h1>
 
 
-<a href="./hokuto_SWA.html">北斗無双 SWA</a><br>
-<a href="./hokuto_1-219.html">北斗無双 1/219</a><br>
-<a href="./hokuto_musou.html">北斗無双</a><br>
-<a href="./seastory4.html">海物語 沖縄</a><br>
+<a href="./hokuto_SWA.html">北斗無双 SWA</a><br><br>
+<a href="./hokuto_1-219.html">北斗無双 1/219</a><br><br>
+<a href="./hokuto_musou.html">北斗無双</a><br><br>
+<a href="./seastory4.html">海物語 沖縄</a><br><br>
 
 </body>
 </html>
