--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <h1>期待値計算~to_boshi~</h1>
 
 
-<a href="./hokuto_SWA.html">北斗無双 SWA</a><br><br>
-<a href="./hokuto_1-219.html">北斗無双 1/219</a><br><br>
-<a href="./hokuto_musou.html">北斗無双</a><br><br>
-<a href="./seastory4.html">海物語 沖縄</a><br><br>
+<a href="./cal_expected_value.html?no=1">北斗無双 SWA</a><br><br>
+<a href="./cal_expected_value.html?no=2">北斗無双 1/219</a><br><br>
+<a href="./cal_expected_value.html?no=3">北斗無双</a><br><br>
+<a href="./cal_expected_value.html?no=4">海物語 沖縄</a><br><br>
 
 </body>
 </html>
