--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -5,15 +5,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="keywords" content="パチンコ,期待値,計算">
-<meta name="description" content="パチンコの期待値を計算します。">
-<title>実績入力／計算</title>
-<!-- <link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen">
--->
-<!-- ▼ファビコン設置箇所▼
-※ファビコンを使用する際はコメントアウトを消してください。-->
+<title>虹遙期待値</title>
+<!-- <link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen"> -->
 <!-- /<link rel="shortcut icon" href="icon URL.ico"> -->
-<!-- ▲ファビコン設置箇所▲ -->
 <script src="./jquery-2.1.4.min.js"></script>
 <script src="./autosize.js?date=20160309"></script>
 <script src="./common.js?date=20160309"></script>
@@ -328,49 +322,15 @@ console.log(kishuInfo);
 
 	<h1>
 		<span></span>
-		<a href="https://yahoo.co.jp">パチンコ期待値.com~yahooに飛ぶようにしてる~</a>
-		<!-- 機種番号：<span id="kishuID"></span> <span id="kishuName"></span> -->
+		<a href="https://maru-t.bitbucket.io/">虹遙期待値</a>
 	</h1>
-	<!--<a href="メールアドレスやRSSなどのURLを入れてください。アイコンも変更可能です。" class="left_link"><img src="img/icon1.jpg" alt=""></a>-->
 
 </div>
 </header>
-<!-- /ヘッダここまで -->
 
-<div id="contents">
-<!-- 更新履歴やTOPICSここから -->
-<!--
-<div id="news">
-	<ul>
-		<li>201x/xx/xx パチンコ期待値.comオープンしました！</li>
-		<li><a href="">最終更新履歴やTOPICSなどを入力してください。</a></li>
-	</ul>
-</div>
--->
-<!-- /更新履歴やTOPICSここまで -->
-
-
-<!-- 説明文ここから -->
-<!--
-<p class="desc">「パチンコ期待値.com」は、パチンコ台の期待値を計算します。
-</p>
--->
-<!-- /説明文ここまで -->
-
-<!-- 広告ここから -->
-<!--
-<div class="ad">
-	<img src="img/sample_banner.jpg" width="320" height="50" alt="">
-</div>
--->
-<!-- /広告ここまで -->
-
-<!-- パンくずここから -->
 <div id="pan">
-	<a href="https://yahoo.co.jp">TOP</a> &gt; <a href="https://yahoo.co.jp">実績入力／計算</a> &gt; 機種番号：<span id="kishuID"></span> <span id="kishuName"></span>
+	<a href="https://maru-t.bitbucket.io/">TOP</a> &gt; 機種名：<span id="kishuName"></span>
 </div>
-<!-- /パンくずここまで -->
-
 
 <!-- 記事内容ここから -->
 <article>
@@ -1064,22 +1024,7 @@ console.log(kishuInfo);
 </article>
 <!-- /記事内容ここまで -->
 
-<!-- 何かあれば説明文補足ここから -->
-<!-- /何かあれば説明文補足ここまで -->
-
-
-<!-- フッタここから -->
-<footer>
-
-	<!-- TOPに戻るここから -->
-	<div class="foot_link">
-	<a href="#contents" class="top scroll">▲ TOP</a>
-	</div>
-	<!-- TOPに戻るここまで -->
-
-</footer>
 </div>
-<!-- /フッタここまで -->
 </form>
 </body>
 </html>
