--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 
@@ -12,7 +12,7 @@
 
 <title>虹遙期待値</title>
 
-<h1>期待値計算~to_boshi~</h1>
+<h1>期待値計算</h1>
 
 
 <a href="./cal_expected_value.html?no=1">北斗無双 SWA</a><br><br>
