--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title>虹遙期待値</title>
-<!-- <link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen"> -->
+<link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen">
 <!-- /<link rel="shortcut icon" href="icon URL.ico"> -->
 <script src="./jquery-2.1.4.min.js"></script>
 <script src="./autosize.js?date=20160309"></script>
