--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<title>虹遙期待値</title>
+<title>期待値</title>
 <link rel="stylesheet" type="text/css" href="jisseki.css?date=20160309" media="screen">
 <!-- /<link rel="shortcut icon" href="icon URL.ico"> -->
 <script src="./jquery-2.1.4.min.js"></script>
