--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -322,7 +322,7 @@ console.log(kishuInfo);
 
 	<h1>
 		<span></span>
-		<a href="https://maru-t.bitbucket.io/">虹遙期待値</a>
+		<a href="https://maru-t.bitbucket.io/">期待値</a>
 	</h1>
 
 </div>
@@ -338,15 +338,16 @@ console.log(kishuInfo);
 </div>
 <div id="jissekiInputOuter">
 	<div class="jissekiInputButton">
+		<!--
 		<button class="saveTemp" name="saveTemp">一時保存</button>
 		<button class="clear" name="clear">クリア</button>
 		<button class="hide" name="hide">結果非表示</button>
 		<button class="calc" name="calc">結果表示</button>
-	<!-- <input type="button" class="saveTemp" name="saveTemp" value="一時保存">
+		-->
+		<input type="button" class="saveTemp" name="saveTemp" value="一時保存">
 		<input type="button" class="clear" name="clear" value="クリア">
 		<input type="button" class="hide" name="hide" value="結果非表示">
 		<input type="button" class="calc" name="calc" value="結果表示">
--->
 
 	</div>
 	<div id="jissekiInput">
