--- a/index.html
+++ b/index.html
@@ -15,11 +15,62 @@
 
 <h1>期待値計算</h1>
 
+<h2>目次</h2>
+<a href="#a">あ</a>
+<a href="#ka">か</a>
+<a href="#sa">さ</a>
+<a href="#ta">た</a>
+<a href="#na">な</a>
+<a href="#ha">は</a>
+<a href="#ma">ま</a>
+<a href="#ya">や</a>
+<a href="#ra">ら</a>
+<a href="#wa">わ</a>
 
+
+<hr>
+<h3 id="a">あ行</h3>
+<a href="./cal_expected_value.html?no=4">海物語 沖縄</a><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ka">か行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="sa">さ行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ta">た行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="na">な行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ha">は行</h3>
 <a href="./cal_expected_value.html?no=1">北斗無双 SWA</a><br><br>
 <a href="./cal_expected_value.html?no=2">北斗無双 1/219</a><br><br>
 <a href="./cal_expected_value.html?no=3">北斗無双</a><br><br>
-<a href="./cal_expected_value.html?no=4">海物語 沖縄</a><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ma">ま行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ya">や行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="ra">ら行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<hr>
+<h3 id="wa">わ行</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
 </html>
