--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h1>期待値計算</h1>
 
-<h2>目次</h2>
+<h2 id="mokuzi">目次</h2>
 <a href="#a">あ</a>
 <a href="#ka">か</a>
 <a href="#sa">さ</a>
@@ -29,47 +29,67 @@
 
 
 <hr>
-<h3 id="a">あ行</h3>
-<a href="./cal_expected_value.html?no=4">海物語 沖縄</a><br><br>
+<h3 id="a">あ行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ka">か行</h3>
+<h3 id="ka">か行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="sa">さ行</h3>
+<h3 id="sa">さ行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
+<a href="./cal_expected_value.html?no=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
+<a href="./cal_expected_value.html?no=2">真・北斗無双 219ver</a><br><br>
+<a href="./cal_expected_value.html?no=3">真・北斗無双</a><br><br>
+<a href="./cal_expected_value.html?no=4">スーパー海物語IN沖縄4MTC</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ta">た行</h3>
+<h3 id="ta">た行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="na">な行</h3>
+<h3 id="na">な行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ha">は行</h3>
-<a href="./cal_expected_value.html?no=1">北斗無双 SWA</a><br><br>
-<a href="./cal_expected_value.html?no=2">北斗無双 1/219</a><br><br>
-<a href="./cal_expected_value.html?no=3">北斗無双</a><br><br>
+<h3 id="ha">は行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ma">ま行</h3>
+<h3 id="ma">ま行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ya">や行</h3>
+<h3 id="ya">や行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="ra">ら行</h3>
+<h3 id="ra">ら行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
-<h3 id="wa">わ行</h3>
+<h3 id="wa">わ行
+<a href="#mokuzi">目次に戻る</a><br>
+</h3>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
