--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <h1>期待値計算</h1>
 
 <h2 id="mokuzi">目次</h2>
+<div class="index">
 <a href="#a">あ</a>
 <a href="#ka">か</a>
 <a href="#sa">さ</a>
@@ -26,7 +27,7 @@
 <a href="#ya">や</a>
 <a href="#ra">ら</a>
 <a href="#wa">わ</a>
-
+</div>
 
 <hr>
 <h3 id="a">あ行
