--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -319,7 +319,7 @@ console.log(kishuInfo);
 <header>
 <div id="head">
 	<h1>
-		<a href="https://ja.wikipedia.org/wiki/%E5%8C%97%E6%96%97%E3%81%AE%E6%8B%B3">期待値</a>
+		<a href="./emargency.html">期待値</a>
 	</h1>
 </div>
 </header>
