--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <h3 id="ra">ら行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?no=5">ルパン三世~Lupin The End~99ver.</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
