--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -32,6 +32,9 @@
 			case "4":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"4","name":"\u30b9\u30fc\u30d1\u30fc\u6d77\u7269\u8a9eIN\u6c96\u7e044 MTC","tokaBorder":"18.750","totalRate":"105.664","denSupRate":"0.610","rironAveDedama":"1408.000","default1R":"88","active":"1"},"kishuAtariInfo":[{"id":"4","no":"1","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1408","shutsugenRate":"100.000"}]}');
 				break;
+			case "5":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"5","name":"\u30eb\u30d1\u30f3\u4e09\u4e16\x7eLupin\x20The\x20End\x7e99ver\x2e","tokaBorder":"19.600","totalRate":"35.709","denSupRate":"0.620","rironAveDedama":"1276.000","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"5","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"180","shutsugenRate":"6.200"},{"id":"5","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"360","shutsugenRate":"59.200"},{"id":"5","no":"3","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"540","shutsugenRate":"18.700"},{"id":"5","no":"4","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"720","shutsugenRate":"9.300"},{"id":"5","no":"5","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"900","shutsugenRate":"5.600"},{"id":"5","no":"6","upDown1":"down","round1":"10","upDown2":"up","round2":"5","roundSum":"15","tamasu":"1350","shutsugenRate":"1.000"}]}');
+				break;
 		}
 
 		var kishuInfo = dispValue['kishuInfo'];
@@ -65,6 +68,7 @@
 
 		// localStrageから初期表示値を取得
 		getFromStrageToForm();
+		console.log("getlocalstorage");
 		if ($('#dispMaxNo').val() == '') {
 			$('#dispMaxNo').val('10');
 		}
@@ -1018,8 +1022,8 @@ console.log(kishuInfo);
 	</div>
 	<div class="jissekiInputButton">
 		<div class="rowControl">
-			<span id="addRow"><img src="img/plus.png" class="rowControl">10行追加</span>&ensp;&ensp;
-			<span id="delRow"><img src="img/minus.png" class="rowControl">10行削除</span>
+			<span id="addRow">10行追加</span>&ensp;&ensp;
+			<span id="delRow">10行削除</span>
 		</div>
 		<input type="button" class="calc" name="calc" value="結果表示">
 	</div>
