--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <h3 id="a">あ行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?no=7">大海物語スペシャル SAP13</a><br><br>
+<a href="./cal_expected_value.html?no=8">大海物語2 withアグネスラム SAA</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
@@ -49,6 +51,7 @@
 <a href="./cal_expected_value.html?no=2">真・北斗無双 219ver</a><br><br>
 <a href="./cal_expected_value.html?no=3">真・北斗無双</a><br><br>
 <a href="./cal_expected_value.html?no=4">スーパー海物語IN沖縄4MTC</a><br><br>
+<a href="./cal_expected_value.html?no=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
