--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -35,6 +35,15 @@
 			case "5":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"5","name":"\u30eb\u30d1\u30f3\u4e09\u4e16\x7eLupin\x20The\x20End\x7e99ver\x2e","tokaBorder":"19.600","totalRate":"35.709","denSupRate":"0.620","rironAveDedama":"1276.000","default1R":"90","active":"1"},"kishuAtariInfo":[{"id":"5","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"180","shutsugenRate":"6.200"},{"id":"5","no":"2","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"360","shutsugenRate":"59.200"},{"id":"5","no":"3","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"540","shutsugenRate":"18.700"},{"id":"5","no":"4","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"720","shutsugenRate":"9.300"},{"id":"5","no":"5","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"900","shutsugenRate":"5.600"},{"id":"5","no":"6","upDown1":"down","round1":"10","upDown2":"up","round2":"5","roundSum":"15","tamasu":"1350","shutsugenRate":"1.000"}]}');
 				break;
+			case "6":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"6","name":"スーパー海物語IN沖縄4 SBB","tokaBorder":"20.100","totalRate":"40.288","denSupRate":"0.570","rironAveDedama":"1246.000","default1R":"77","active":"1"},"kishuAtariInfo":[{"id":"6","no":"1","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"464","shutsugenRate":"95.000"},{"id":"6","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1237","shutsugenRate":"5.000"}]}');
+				break;
+			case "7":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"7","name":"大海物語スペシャル SAP13","tokaBorder":"19.100","totalRate":"40.543","denSupRate":"0.560","rironAveDedama":"1312.000","default1R":"81","active":"1"},"kishuAtariInfo":[{"id":"7","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"408","shutsugenRate":"40.000"},{"id":"7","no":"2","upDown1":"down","round1":"7","upDown2":"-","round2":"0","roundSum":"7","tamasu":"571","shutsugenRate":"56.000"},{"id":"7","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1225","shutsugenRate":"4.000"}]}');
+				break;
+			case "8":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"8","name":"大海物語2 withアグネスラム SAA","tokaBorder":"18.000","totalRate":"40.223","denSupRate":"0.570","rironAveDedama":"1391","default1R":"99","active":"1"},"kishuAtariInfo":[{"id":"8","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"397","shutsugenRate":"36.000"},{"id":"8","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"596","shutsugenRate":"60.000"},{"id":"8","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1490","shutsugenRate":"4.000"}]}');
+				break;
 		}
 
 		var kishuInfo = dispValue['kishuInfo'];
