[fix]can't save temporaly

--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -10,7 +10,7 @@
 <script src="./jquery-2.1.4.min.js"></script>
 <script src="./autosize.js?date=20160309"></script>
 <script src="./common.js?date=20160309"></script>
-<script src="./jisseki.js?date=20160309"></script>
+<script src="./jissekicp.js?date=20160309"></script>
 <script>
 	$(function() {
 
