--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <h3 id="a">あ行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
-<a href="./cal_expected_value.html?no=7">大海物語スペシャル SAP13</a><br><br>
-<a href="./cal_expected_value.html?no=8">大海物語2 withアグネスラム SAA</a><br><br>
+<a href="./cal_expected_value.html?id=7">大海物語スペシャル SAP13</a><br><br>
+<a href="./cal_expected_value.html?id=8">大海物語2 withアグネスラム SAA</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
@@ -47,11 +47,11 @@
 <h3 id="sa">さ行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
-<a href="./cal_expected_value.html?no=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
-<a href="./cal_expected_value.html?no=2">真・北斗無双 219ver</a><br><br>
-<a href="./cal_expected_value.html?no=3">真・北斗無双</a><br><br>
-<a href="./cal_expected_value.html?no=4">スーパー海物語IN沖縄4MTC</a><br><br>
-<a href="./cal_expected_value.html?no=6">スーパー海物語IN沖縄4 SBB</a><br><br>
+<a href="./cal_expected_value.html?id=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
+<a href="./cal_expected_value.html?id=2">真・北斗無双 219ver</a><br><br>
+<a href="./cal_expected_value.html?id=3">真・北斗無双</a><br><br>
+<a href="./cal_expected_value.html?id=4">スーパー海物語IN沖縄4MTC</a><br><br>
+<a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
@@ -88,7 +88,7 @@
 <h3 id="ra">ら行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
-<a href="./cal_expected_value.html?no=5">ルパン三世~Lupin The End~99ver.</a><br><br>
+<a href="./cal_expected_value.html?no=id">ルパン三世~Lupin The End~99ver.</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
