--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <h3 id="ra">ら行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
-<a href="./cal_expected_value.html?no=id">ルパン三世~Lupin The End~99ver.</a><br><br>
+<a href="./cal_expected_value.html?id=5">ルパン三世~Lupin The End~99ver.</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
