--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -44,6 +44,9 @@
 			case "8":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"8","name":"大海物語2 withアグネスラム SAA","tokaBorder":"18.000","totalRate":"40.223","denSupRate":"0.570","rironAveDedama":"1391","default1R":"99","active":"1"},"kishuAtariInfo":[{"id":"8","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"397","shutsugenRate":"36.000"},{"id":"8","no":"2","upDown1":"down","round1":"6","upDown2":"-","round2":"0","roundSum":"6","tamasu":"596","shutsugenRate":"60.000"},{"id":"8","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1490","shutsugenRate":"4.000"}]}');
 				break;
+			case "9":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"9","name":"スーパー海物語in沖縄4~桜バージョン~","tokaBorder":"19.600","totalRate":"51.873","denSupRate":"0.81","rironAveDedama":"2554","default1R":"78","active":"1"},"kishuAtariInfo":[{"id":"9","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"312","shutsugenRate":"37.500"},{"id":"9","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"624","shutsugenRate":"37.500"},{"id":"9","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1248","shutsugenRate":"25.000"}]}');
+				break;
 		}
 
 		var kishuInfo = dispValue['kishuInfo'];
