[add]Fuziko Lupin The End H1BZ1

--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -47,6 +47,9 @@
 			case "9":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"9","name":"スーパー海物語in沖縄4~桜バージョン~","tokaBorder":"19.600","totalRate":"51.873","denSupRate":"0.81","rironAveDedama":"2554","default1R":"78","active":"1"},"kishuAtariInfo":[{"id":"9","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"312","shutsugenRate":"37.500"},{"id":"9","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"624","shutsugenRate":"37.500"},{"id":"9","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1248","shutsugenRate":"25.000"}]}');
 				break;
+			case "10":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"10","name":"不二子 Lupin The End H1BZ1","tokaBorder":"20.500","totalRate":"93.941","denSupRate":"0.59","rironAveDedama":"1150","default1R":"140","active":"1"},"kishuAtariInfo":[{"id":"10","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"420","shutsugenRate":"52.100"},{"id":"10","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1120","shutsugenRate":"12.600"},{"id":"10","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2240","shutsugenRate":"35.300"}]}');
+				break;
 		}
 
 		var kishuInfo = dispValue['kishuInfo'];
