--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <h3 id="ha">は行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=10">不二子 Lupin The End H1BZ1</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
