[add]three new dai

--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -18,6 +18,10 @@
 
 		console.log(pair);
 
+/*
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"","name":"","tokaBorder":"","totalRate":"","denSupRate":"","rironAveDedama":"","default1R":"","active":"1"},"kishuAtariInfo":[{"id":"","no":"1","upDown1":"down","round1":"","upDown2":"-","round2":"0","roundSum":"","tamasu":"","shutsugenRate":""},{"id":"","no":"2","upDown1":"down","round1":"","upDown2":"-","round2":"0","roundSum":"","tamasu":"","shutsugenRate":""},{"id":"","no":"3","upDown1":"down","round1":"","upDown2":"-","round2":"0","roundSum":"","tamasu":"","shutsugenRate":""}]}');
+*/
+
 		// 初期表示値の設定
 		switch(pair[1]){
 			case "1":
@@ -48,7 +52,16 @@
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"9","name":"スーパー海物語in沖縄4~桜バージョン~","tokaBorder":"19.600","totalRate":"51.873","denSupRate":"0.81","rironAveDedama":"2554","default1R":"78","active":"1"},"kishuAtariInfo":[{"id":"9","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"312","shutsugenRate":"37.500"},{"id":"9","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"624","shutsugenRate":"37.500"},{"id":"9","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"1248","shutsugenRate":"25.000"}]}');
 				break;
 			case "10":
-				var dispValue = JSON.parse('{"kishuInfo":{"id":"10","name":"不二子 Lupin The End H1BZ1","tokaBorder":"20.500","totalRate":"93.941","denSupRate":"0.59","rironAveDedama":"1150","default1R":"140","active":"1"},"kishuAtariInfo":[{"id":"10","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"420","shutsugenRate":"52.100"},{"id":"10","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1120","shutsugenRate":"12.600"},{"id":"10","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2240","shutsugenRate":"35.300"}]}');
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"10","name":"不二子 Lupin The End H1BZ1","tokaBorder":"20.500","totalRate":"93.941","denSupRate":"0.59","rironAveDedama":"3913","default1R":"140","active":"1"},"kishuAtariInfo":[{"id":"10","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"420","shutsugenRate":"52.100"},{"id":"10","no":"2","upDown1":"down","round1":"8","upDown2":"-","round2":"0","roundSum":"8","tamasu":"1120","shutsugenRate":"12.600"},{"id":"10","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"2240","shutsugenRate":"35.300"}]}');
+				break;
+			case "11":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"11","name":"地獄少女～弐 FPA 安心ルートver.","tokaBorder":"19.8","totalRate":"17.975","denSupRate":"1.58","rironAveDedama":"663","default1R":"53","active":"1"},"kishuAtariInfo":[{"id":"11","no":"1","upDown1":"down","round1":"3","upDown2":"-","round2":"0","roundSum":"3","tamasu":"160","shutsugenRate":"80.000"},{"id":"11","no":"2","upDown1":"down","round1":"9","upDown2":"-","round2":"0","roundSum":"9","tamasu":"480","shutsugenRate":"19.000"},{"id":"11","no":"3","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"853","shutsugenRate":"1.000"}]}');
+				break;
+			case "12":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"12","name":"魔法先生ネギま！ MM","tokaBorder":"20.9","totalRate":"111.465","denSupRate":"0.05","rironAveDedama":"2958","default1R":"105","active":"1"},"kishuAtariInfo":[{"id":"12","no":"1","upDown1":"down","round1":"10","upDown2":"-","round2":"0","roundSum":"10","tamasu":"1050","shutsugenRate":"43.700"},{"id":"12","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1575","shutsugenRate":"56.300"}]}');
+				break;
+			case "13":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"13","name":"金田一少年の事件簿2～地獄の傀儡師","tokaBorder":"19.4","totalRate":"111.460","denSupRate":"0.70","rironAveDedama":"4102","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"13","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"615","shutsugenRate":"33.200"},{"id":"13","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"66.800"}]}');
 				break;
 		}
 
