--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
 <h3 id="ka">か行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=13">金田一少年の事件簿2～地獄の傀儡師</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
 <h3 id="sa">さ行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=11">地獄少女～弐 FPA 安心ルートver.</a><br><br>
 <a href="./cal_expected_value.html?id=1">真・北斗無双 夢幻闘乱 SWA</a><br><br>
 <a href="./cal_expected_value.html?id=2">真・北斗無双 219ver</a><br><br>
 <a href="./cal_expected_value.html?id=3">真・北斗無双</a><br><br>
@@ -79,6 +81,7 @@
 <h3 id="ma">ま行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=12">魔法先生ネギま！ MM</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
