--- a/cal_expected_value.html
+++ b/cal_expected_value.html
@@ -63,6 +63,12 @@
 			case "13":
 				var dispValue = JSON.parse('{"kishuInfo":{"id":"13","name":"金田一少年の事件簿2～地獄の傀儡師","tokaBorder":"19.4","totalRate":"111.460","denSupRate":"0.70","rironAveDedama":"1437","default1R":"123","active":"1"},"kishuAtariInfo":[{"id":"13","no":"1","upDown1":"down","round1":"5","upDown2":"-","round2":"0","roundSum":"5","tamasu":"615","shutsugenRate":"33.200"},{"id":"13","no":"2","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1845","shutsugenRate":"66.800"}]}');
 				break;
+			case "14":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"14","name":"ダーカーブラック-黒の契約者-AA","tokaBorder":"20.3","totalRate":"33.580","denSupRate":"0.96","rironAveDedama":"414","default1R":"53.5","active":"1"},"kishuAtariInfo":[{"id":"14","no":"1","upDown1":"down","round1":"4","upDown2":"-","round2":"0","roundSum":"4","tamasu":"214","shutsugenRate":"69.0"},{"id":"14","no":"2","upDown1":"down","round1":"16","upDown2":"-","round2":"0","roundSum":"16","tamasu":"858","shutsugenRate":"31.0"}]}');
+				break;
+			case "15":
+				var dispValue = JSON.parse('{"kishuInfo":{"id":"15","name":"大海物語4 MTB","tokaBorder":"20.0","totalRate":"105.172","denSupRate":"0.56","rironAveDedama":"1318","default1R":"114","active":"1"},"kishuAtariInfo":[{"id":"15","no":"1","upDown1":"down","round1":"2","upDown2":"-","round2":"0","roundSum":"2","tamasu":"63","shutsugenRate":"9.0"},{"id":"15","no":"2","upDown1":"down","round1":"12","upDown2":"-","round2":"0","roundSum":"12","tamasu":"1368","shutsugenRate":"71.0"},{"id":"15","no":"3","upDown1":"down","round1":"15","upDown2":"-","round2":"0","roundSum":"15","tamasu":"1710","shutsugenRate":"20.0"}]}');
+				break;
 		}
 
 		var kishuInfo = dispValue['kishuInfo'];
