--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </h3>
 <a href="./cal_expected_value.html?id=7">大海物語スペシャル SAP13</a><br><br>
 <a href="./cal_expected_value.html?id=8">大海物語2 withアグネスラム SAA</a><br><br>
+<a href="./cal_expected_value.html?id=8">大海物語4 MTB</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
@@ -62,6 +63,7 @@
 <h3 id="ta">た行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=14">ダーカーブラック-黒の契約者-AA</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
