--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <h3 id="ka">か行
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
+<a href="./cal_expected_value.html?id=16">ギルティクラウン AA</a><br><br>
 <a href="./cal_expected_value.html?id=13">金田一少年の事件簿2～地獄の傀儡師</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
@@ -84,6 +85,7 @@
 <a href="#mokuzi">目次に戻る</a><br>
 </h3>
 <a href="./cal_expected_value.html?id=12">魔法先生ネギま！ MM</a><br><br>
+<a href="./cal_expected_value.html?id=17">麻雀物語~役満乱舞のドラム大戦~M2BU3</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
