--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <a href="./cal_expected_value.html?id=6">スーパー海物語IN沖縄4 SBB</a><br><br>
 <a href="./cal_expected_value.html?id=9">スーパー海物語in沖縄4~桜バージョン~</a><br><br>
 <a href="./cal_expected_value.html?id=18">J RASH3 HSJ</a><br><br>
-<a href="./cal_expected_value.html?id=20">真・花の慶次2　L4－VH</a><br><br>
+<a href="./cal_expected_value.html?id=20">真・花の慶次2</a><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
